# loto

./: Anchor.toml  package-lock.json
app/: package-lock.json
app/src/: App.js
programs/lotto/: Cargo.toml
programs/lotto/src/: airdrop.rs  lib.rs
tests/: lotto.ts
